feat: add early support for dotnet

--- a/tool/templates/csharp/impl.cs.jinja
+++ b/tool/templates/csharp/impl.cs.jinja
@@ -1,5 +1,4 @@
-{% if is_for_cpp -%}
-extern "C" {
+
 {%- endif %}
 {%- for cb_and_struct_def in cb_structs_and_defs %}
 typedef struct {{ cb_and_struct_def.name }} {
@@ -7,15 +6,15 @@ typedef struct {{ cb_and_struct_def.name }} {
     {{ cb_and_struct_def.return_type }} (*run_callback)(const void*{% if cb_and_struct_def.params_types != "" %}, {{ cb_and_struct_def.params_types }} {% endif %});
     void (*destructor)(const void*);
 } {{ cb_and_struct_def.name }};
-{%- endfor %}
+{% -endfor %}
+
 {% for method in methods %}
-{{ method.return_ty }} {{ method.abi_name }}({{ method.params }});
+[DllImport(__DllName, EntryPoint = "{{ method.abi_name }}", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
+{{ method.return_ty_ffi }} {{ method.abi_name_ffi }}({{ method.params_ffi }});
 {% endfor %}
+
 {%~ match dtor_name %}
 {% when Some with (dtor_name) ~%}
 void {{ dtor_name }}({{ ty_name }}* self);
 {%~ when None %}
 {%- endmatch %}
-{% if is_for_cpp -%}
-} // extern "C"
-{%- endif %}
